syntax = "proto3";

message PingRequest {
  string message = 1;
}

message PingResponse {
  bool success = 1;
  string message = 2;
}

service NodeConnector {
  rpc Ping (PingRequest) returns (PingResponse) {}
}
